additional css styling for responsive design.  off center needs fix.  still missing jquery button elements and iframe not working

--- a/css/grid.css
+++ b/css/grid.css
@@ -6,9 +6,7 @@
 	max-width: 1000px;
 	padding-left: 20px;
 	padding-right: 20px;
-	margin: 0px;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 0 auto;
 }
 
 /*clearfix*/
@@ -21,11 +19,16 @@
 .row::after {
 	clear: both;
 }
+.col_4, .col_12, .col_3, .col_6, .col_8, .col_2{
+	float: left;
+  	padding-left: 1.04166666%;
+  	padding-right: 1.04166666%;
+}
 /*mobile device default settings*/
-.col_4, .col_12, .col_3, .col_6{
+.col_4, .col_12, .col_3, .col_6, .col_8, .col_2{
 	width: 100%;
-	margin-left: auto;
 	margin-right: auto;
+	margin-left: auto;
 }
 
 /*non-mobile device screens*/
