--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 	box-sizing: border-box;
 	font-family: 'Orbitron', sans-serif;
 	color: #e6e6ff;
+	font-size: 100%;
 }
 body {
 	background-image: url("../images/cubes.png");
@@ -12,19 +13,19 @@ body {
 }
 
 h1 {
-	font-size: 140px;
-	margin-left: 40px;
+	font-size: 8em;
+	/*margin-left: 40px;*/
 	margin-bottom: 5px;
 }
 h3 {
-	font-size: 50px;
+	font-size: 3em;
 	margin: 20px 0 60px 40px;
 }
 h2 {
 	padding-left: 14px;
 }
 footer {
-	bottom: 0;
+	bottom: 10;
 	left: 0;
 	margin: 5px;
 	margin-left: 40px;
@@ -37,7 +38,7 @@ a:visited {
 	color: #00001a;
 	margin-left: 40px;
 	margin-bottom: 4px;
-	font-size: 20px;
+	font-size: 1em;
 }
 #share-buttons img {
 	width: 35px;
